--- a/HW1__sec02.Rmd
+++ b/HW1__sec02.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "HW1-sec02"
-author: "Your Name Goes Here"
+author: "Susan Khan"
 output: pdf_document
 ---
 
@@ -56,6 +56,9 @@ The data we will work with were extracted from that plot and are available in a 
 #### (a) Read the data into an R data frame and make a plot with the mean annual temperature on the horizontal axis and the percent of leaves in the given location that are entire margined on the vertical axis.
 
 ```{r}
+library(readr)
+nhanes <- read_csv("leaf_margins.csv")
+plot(pct_entire_margined~mean_annual_temp_C)
 
 ```
 
@@ -63,35 +66,77 @@ The data we will work with were extracted from that plot and are available in a 
 
 ```{r}
 
+plot(pct_entire_margined~mean_annual_temp_C)
+leafmodel=lm(pct_entire_margined~mean_annual_temp_C)
+abline(leafmodel)
+summary(leafmodel)
+# regression model: pct_entire_margined= -2.16513+3.18058 mean_annual_temp_C+ε
+
+#Because β1 is positive, there is a positive relationship between the mean annual temperature and the percentage of leaves that are entire margined. Therefore, for a 1 degree celcius increase in the mean annual temperature there will be a 3.18058 percentage increase of leaves in the given location that are entire margined. 
 ```
 
 #### (c) Conduct a hypothesis test of the claim that there is no association between mean temperature and percent of leaves that are entire margined.  For this test, clearly state your null and alternative hypotheses in terms of model parameters.  State your conclusion in a complete sentence.  You don't need to "reject" or "fail to reject" the null hypothesis; instead, interpret what the p-value for the test means in terms of strength of evidence against the null hypothesis.  For example, a small p-value like 0.000002 indicates very strong evidence against the null hypothesis, while a large p-value like 0.2 indicates no evidence against the null hypothesis.
+
+```{r}
+leafmodel=lm(pct_entire_margined~mean_annual_temp_C)
+summary(leafmodel)
+
+# H0: β1=0, there no association between percentage of leaves that are entire margined and mean annual temperature
+# H1: β1 does not equal 0, there is an association between percentage of leaves that are entire margined and mean annual temperature
+# where β1 is the slope coefficient.
+
+#From our test statistics we see that the p-value=2e-16 for B1 is significantly small. This gives us a strong evidence that there is an association between percentage of leaves that are entire margined and mean annual temperature.
+```
 
 
 
 ### (d) Find and interpret a 95% confidence interval for the slope.
 
 ```{r}
+leafmodel=lm(pct_entire_margined~mean_annual_temp_C)
+confint(leafmodel, level=0.95)
 
+#95% confidence interval for the slope:  3.041905 to 3.041905
+#Interpretation of confidence interval: If we replicated the same study multiple times with different random samples and computed a confidence interval for each sample, 95% of the time we would expect the true slope of the regression line to fall within the interval 3.041905 to 3.041905.
 ```
 
 #### (e) State the model you have fit in matrix form.
+```{r}
+leafmodel=lm(pct_entire_margined~mean_annual_temp_C)
 
+#model in matrix form: [y]=[x][β]+[ε]
+#where [β] is a 2x1 vector containing where row1 contains β0 and row2 contains β1 , [y] is 34x1 matrix containing pct_entire_margined, [x] is 34x2 matrix where column one contains the number 1 and column 2 contain mean_annual_temp_C and ε is the error term.
 
+```
 
 #### (f) Extract the design matrix from your model fit and use it to find the fitted values for the regression.  Make a scatter plot showing the original data as well as the fitted values.
 
 ```{r}
+leafmodel=lm(pct_entire_margined~mean_annual_temp_C)
+
+model.matrix(leafmodel)
+
+pairs(pct_entire_margined~mean_annual_temp_C)
+
 
 ```
+
+
+
 
 # Collaboration and Sources
 
 If you worked with any other students on this assignment, please list their names here.
 
+Anamika Khanal
+Stephanie Spitzer
+
 
 
 If you referred to any sources (including our text book), please list them here.  No need to get into formal citation formats, just list the name of the book(s) you used or provide a link to any online resources you used.
+
+code for design matrix: http://www.evanlray.com/stat340_f2019/materials/20190909_matrix_least_squares/20180909_matrix_formulation_multiple_reg.pdf
+
 
 
 
